adding table connectivity

--- a/ghcpfunc.csproj
+++ b/ghcpfunc.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Azure.Data.Tables" Version="12.11.0" />
     <PackageReference Include="Azure.Identity" Version="1.13.2" />
     <PackageReference Include="dotnetenv" Version="3.1.1" />
     <!-- <PackageReference Include="dotnetenv" Version="3.1.1" /> -->
@@ -17,6 +18,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.2.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.3.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.0" />
     <PackageReference Include="Microsoft.Graph" Version="5.77.0" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
